--- a/css/index.css
+++ b/css/index.css
@@ -3,9 +3,11 @@
     --black: #000;
     --red: #ED6755;
     --grey: #2C3E50;
-    --blue: #1C1B5E;
+    --blue: #151A41;
     --red-ligth: #fd0606;
     --grey-ligth: #f5f5f5;
+    --pink:#FF0099;
+
 }
 *{
     margin: 0;
@@ -16,6 +18,38 @@ body{
     font-family: 'Roboto', sans-serif;
     background-color: var(--grey);
 }
+/**** botones ****/
+.alertCookies{
+    width: 200px;
+    height: 50px;
+    padding: 0 10px;
+    border: none;
+    background-color: var(--red);
+    border-radius: 25px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;    color: var(--grey-ligth);
+    font-size: 20px;
+}
+.alertAmpliarSesion{
+    width: 200px;
+    height: 50px;
+    padding: 0 10px;
+    border: none;
+    background-color: var(--blue);
+    border-radius: 25px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;    color: var(--grey-ligth);
+    font-size: 20px;
+}
+.alertFeedBack{
+    width: 200px;
+    height: 50px;
+    padding: 0 10px;
+    border: none;
+    background-color: var(--pink);
+    border-radius: 25px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;    color: var(--grey-ligth);
+    font-size: 20px;
+}
+/***** ejercicio 1 *****/
 h1{
     font-size: 2.5rem;
     font-weight: 700;
@@ -133,25 +167,164 @@ h1{
     margin: 100px auto;
 }
 
-.alertCookies{
-    width: 200px;
-    height: 50px;
-    padding: 0 10px;
-    border: none;
-    background-color: var(--red);
-    border-radius: 25px;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;    color: var(--grey-ligth);
-    font-size: 20px;
+
+/**** feed back ****/
+
+#feedBack{
+    width: 450px;
+    height: 400px;
+    padding: auto;
+    margin:  100px auto;
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--grey-ligth);
+    border-radius: 20px;
+    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
 }
-.alertAmpliarSesion{
-    width: 200px;
-    height: 50px;
-    padding: 0 10px;
+.feedBack-x{
+    width: 30px;
+    height: 30px;
+    position: relative;
+    top: 11px;
+    right: -198px;
+    background-color: var(--white);
     border: none;
-    background-color: var(--blue);
-    border-radius: 25px;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;    color: var(--grey-ligth);
-    font-size: 20px;
+    border-radius: 50%; 
+    color: var(--grey-ligth);
+    font-size: 15px;
+    cursor: pointer;
+    transition: all 0.5s ease;
+    font-size: 25px;
+}
+.feedBack-x:hover{
+    background-color: var(--grey-ligth);
+    color: var(--red);
+}
+.texto-feedBack{
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 28px;
+    width: 310px;
+    
+    color: var(--blue);
+}
+
+.ul ul{
+    width: 350px;
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    list-style: none;
+}
+.ul li label{
+    width: 55px;
+    height: 40px;
+    background-color: var(--white);
+    border: solid 0.5px #E4E6F6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: all 0.5s ease;
+    padding: 0;
+    margin: 0;
+    gap: -1000px;
+}
+.ul li label:hover{
+    width: 55px;
+    height: 40px;
+    background-color: var(--pink);
+    border: solid 0.5px var(--grey-ligth);
+}
+.radio{
+    display: none;
+}
+.radio:checked + label{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--pink);
+    border: solid 0.5px var(--grey-ligth);
+}
+.ul{
+    width: 350px;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    list-style: none;
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+.texto-ul{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 300px;
+    padding-top: 0;
+    margin-top: 0;
+}
+.texto-ul p{
+    font-size: 15px;
+    font-weight: 600;
+    line-height: 18px;
+}
+.p3{
+    text-align: right;
+}
+.terminos{
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 28px;
+    color: var(--blue);
+    display: flex;
+    align-items: initial;
+    align-items: center;
+    width: 300px;
+    gap: 5px;
+}
+.terminos input{
+    width: 20px;
+    height: 20px;
+    border: solid 0.5px #E4E6F6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: all 0.5s ease;
+}
+.line{
+width: 310px;
+height: 2px;
+background: #E4E6F6;
+}
+.btnEnviar{  
+box-sizing: border-box;
+width: 310px;
+height: 69px;
+background: #FFFFFF;
+border: 1px solid #E4E6F6;
+border-radius: 5px;
+font-size: 16px;
+font-weight: 500;
+line-height: 28px;
+color: #1E1E1E;
+margin-bottom: 40px;
+}
+.btnEnviar:hover{
+    background-color: var(--pink);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+#feedBack{
+    display: none;
 }
 
 
